...
            ),
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: t("Perfil", "Profile"),
          tabBarIcon: ({ color }) =>
            isIOS ? (
              <SymbolView name="person" tintColor={color} size={22} />
            ) : (
              <Feather name="user" size={22} color={color} />
            ),
...
